--- a/src/components/signup/signup.module.css
+++ b/src/components/signup/signup.module.css
@@ -30,6 +30,14 @@ input{
     border-color: #0a58ca;
 }
 .disabled{
+    margin-top: 20px;
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+    padding: 0.375rem 0.75rem;
     opacity: 0.65;
     cursor: default;
 }
